erDiagram
    usuario {
        bigint id_usuario PK
        varchar nombre
        varchar numero_telefono UK
        varchar alias
        boolean activo
        datetime fecha_registro
    }

    mensaje {
        bigint id_mensaje PK
        bigint id_usuario FK
        text contenido
        varchar direccion
        datetime fecha_envio
    }

    habito {
        bigint id_habito PK
        bigint id_usuario FK
        varchar nombre
        varchar categoria
        text descripcion
        varchar frecuencia
        boolean activo
        datetime fecha_creacion
    }

    registro_habito {
        bigint id_registro PK
        bigint id_habito FK
        date fecha
        decimal valor
        text observacion
    }

    categoria_finanza {
        bigint id_categoria PK
        varchar nombre
        varchar tipo
    }

    transaccion_finanza {
        bigint id_transaccion PK
        bigint id_usuario FK
        bigint id_categoria FK
        decimal monto
        text descripcion
        datetime fecha
    }

    entrenamiento {
        bigint id_entrenamiento PK
        bigint id_usuario FK
        varchar tipo
        varchar subtipo
        datetime fecha
        text observacion
    }

    entrenamiento_aerobico {
        bigint id_aerobico PK
        bigint id_entrenamiento FK
        decimal distancia_km
        time duracion
        decimal ritmo_promedio
        int calorias
    }

    entrenamiento_fuerza {
        bigint id_fuerza PK
        bigint id_entrenamiento FK
        varchar musculo_principal
        text rutina
    }

    ejercicio {
        bigint id_ejercicio PK
        bigint id_fuerza FK
        varchar nombre
        int series
        int repeticiones
        decimal peso_kg
    }

    usuario ||--o{ mensaje : "envia"
    usuario ||--o{ habito : "tiene"
    habito ||--o{ registro_habito : "registra"
    usuario ||--o{ transaccion_finanza : "realiza"
    categoria_finanza ||--o{ transaccion_finanza : "clasifica"
    usuario ||--o{ entrenamiento : "realiza"
    entrenamiento ||--|| entrenamiento_aerobico : "detalle_aerobico"
    entrenamiento ||--|| entrenamiento_fuerza : "detalle_fuerza"
    entrenamiento_fuerza ||--o{ ejercicio : "contiene"